Complete deployment setup and critical bug fixes
- Fixed 3 critical runtime crashes (logger NameError, evaluate IndexError, scheduler KeyError)
- Added complete Next.js frontend with TypeScript and Tailwind CSS
- Created Railway.app backend deployment configuration
- Added comprehensive deployment guide for Vercel + Railway
- Enhanced Docker configuration and monitoring stack
- Added environment file templates for easy configuration
- Implemented advanced training features and model export scripts
- Added CI/CD workflows and production monitoring
- Fixed all import errors, config mismatches, and validation issues

Ready for production deployment.

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
+    curl \
     libglib2.0-0 \
     libsm6 \
     libxext6 \
@@ -25,6 +26,10 @@ RUN pip install --no-cache-dir -r requirements.txt && \
 COPY src/ ./src/
 COPY deploy/ ./deploy/
 COPY config/ ./config/
+COPY setup.py .
+
+# Install package in editable mode for proper imports
+RUN pip install --no-cache-dir -e .
 
 # Create directory for models
 RUN mkdir -p /app/models
@@ -34,11 +39,12 @@ EXPOSE 5000
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
-ENV FLASK_APP=deploy/api.py
+ENV FLASK_APP=deploy/api_with_metrics.py
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:5000/health || exit 1
 
-# Run with gunicorn for production
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "--workers", "2", "--timeout", "120", "deploy.api:app"]
+# Run API (uses Flask dev server, or override with docker-compose)
+# Note: Model must be loaded via main(), so direct Flask app import doesn't work with gunicorn
+CMD ["python3", "deploy/api_with_metrics.py"]
