--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,74 @@
 # Deep Learning Frameworks
-torch>=2.0.0
-torchvision>=0.15.0
-torchaudio>=2.0.0
+torch==2.0.1
+torchvision==0.15.2
+torchaudio==2.0.2
 
 # Medical Imaging
-nibabel>=5.0.0
-pydicom>=2.3.0
-SimpleITK>=2.2.0
+nibabel==5.1.0
+pydicom==2.4.3
+SimpleITK==2.3.0
 
 # Computer Vision & Image Processing
-opencv-python>=4.7.0
-albumentations>=1.3.0
-Pillow>=9.5.0
+opencv-python==4.8.1.78
+albumentations==1.3.1
+Pillow==10.0.1
 
 # Machine Learning
-scikit-learn>=1.2.0
-scikit-image>=0.20.0
+scikit-learn==1.3.1
+scikit-image==0.21.0
 
 # Numerical Computing
-numpy>=1.24.0
-scipy>=1.10.0
-pandas>=2.0.0
+numpy==1.24.3
+scipy==1.11.3
+pandas==2.1.1
 
 # Visualization
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.14.0
+matplotlib==3.8.0
+seaborn==0.13.0
+plotly==5.17.0
 
 # Experiment Tracking & Logging
-tensorboard>=2.12.0
-wandb>=0.15.0  # Optional: Weights & Biases
-mlflow>=2.3.0  # Optional: MLflow
+tensorboard==2.14.1
+wandb==0.15.12  # Optional: Weights & Biases
+mlflow==2.7.1  # Optional: MLflow
 
 # Progress Bars
-tqdm>=4.65.0
+tqdm==4.66.1
 
 # Configuration
-PyYAML>=6.0
-omegaconf>=2.3.0
+PyYAML==6.0.1
+omegaconf==2.3.0
 
 # Interpretability
-grad-cam>=1.4.0
-captum>=0.6.0  # PyTorch interpretability
+grad-cam==1.4.8
+captum==0.6.0  # PyTorch interpretability
 
-# Testing
-pytest>=7.3.0
-pytest-cov>=4.0.0
-
-# Code Quality
-black>=23.3.0
-flake8>=6.0.0
-mypy>=1.2.0
-isort>=5.12.0
+# Code Quality (for CI/CD)
+black==23.10.0
+flake8==6.1.0
+mypy==1.6.1
+isort==5.12.0
 
 # Jupyter
-jupyter>=1.0.0
-ipykernel>=6.22.0
-ipywidgets>=8.0.0
+jupyter==1.0.0
+ipykernel==6.25.2
+ipywidgets==8.1.1
 
 # Utilities
-python-dotenv>=1.0.0
-argparse>=1.4.0
+python-dotenv==1.0.0
+argparse==1.4.0
 
 # API & Deployment
-Flask>=2.3.0
-Flask-CORS>=4.0.0
-gunicorn>=20.1.0
-requests>=2.31.0
-onnx>=1.14.0
-onnxruntime>=1.15.0
+Flask==3.0.0
+Flask-CORS==4.0.0
+gunicorn==21.2.0
+requests==2.31.0
+onnx==1.14.1
+onnxruntime==1.16.1
+prometheus-client==0.19.0  # Metrics and monitoring
 
 # Medical AI Specific
-monai>=1.2.0  # Medical Open Network for AI (optional but useful)
+monai==1.3.0  # Medical Open Network for AI (optional but useful)
 
 # GPU Utilities (optional)
-nvidia-ml-py3>=7.352.0  # For GPU monitoring
+nvidia-ml-py3==7.352.0  # For GPU monitoring
