Bundle trained model in Docker image for deployment
- Add models/best_model.pth (4.9MB) to repository
- Update Dockerfile to copy model into container
- Update .gitignore to allow production model file
- Removes need for separate model upload step

This ensures the model is always available on deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ experiments/results/**
 *.pt
 *.ckpt
 
+# Allow production model for deployment
+!models/best_model.pth
+
 # TensorBoard
 runs/
 tensorboard/
@@ -80,3 +83,4 @@ Thumbs.db
 # Allow example data readme
 !data/raw/README.md
 !data/processed/README.md
+.vercel
