Fix: Remove models/ from .dockerignore to allow model bundling
The .dockerignore was excluding the entire models/ directory, preventing
the model file from being copied into the Docker image during Railway builds.

Changed:
- Removed global *.pth, *.pt, and models/ exclusions
- Keep exclusions only for checkpoints/ and experiments/ directories
- Now models/best_model.pth will be included in Docker build context

This fixes the Railway build error: "/models": not found

--- a/.dockerignore
+++ b/.dockerignore
@@ -55,12 +55,11 @@ data/
 *.h5
 *.hdf5
 
-# Models (mount separately)
+# Model checkpoints (exclude training artifacts, allow production model)
 checkpoints/
-*.pth
-*.pt
+experiments/checkpoints/
+experiments/logs/
 *.onnx
-models/
 
 # Logs
 logs/
